--- a/res/xml/settings_quicksettings.xml
+++ b/res/xml/settings_quicksettings.xml
@@ -19,6 +19,12 @@
             android:title="@string/quick_pulldown_title"
             android:defaultValue="true" />
 
+    <com.android.settings.preference.SystemSettingSwitchPreference
+        android:key="toast_icon"
+        android:title="@string/toast_icon_title"
+        android:summary="@string/toast_icon_summary"
+        android:defaultValue="false" />
+
     <PreferenceScreen
             android:key="qs_advanced"
             android:fragment="com.armory.settings.ui.qs.AdvancedSettings"
