--- a/res/xml/settings_main.xml
+++ b/res/xml/settings_main.xml
@@ -24,4 +24,14 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="Navigation Bar">
+
+        <com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_navbar"
+            android:title="@string/double_tap_sleep_navbar"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
