--- a/res/xml/settings_main.xml
+++ b/res/xml/settings_main.xml
@@ -34,4 +34,14 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="Lockscreen">
+
+        <com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_lockscreen"
+            android:title="@string/double_tap_sleep_lockscreen"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
