--- a/res/xml/settings_quicksettings.xml
+++ b/res/xml/settings_quicksettings.xml
@@ -14,9 +14,14 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-        <com.android.settings.preference.SystemSettingSwitchPreference
+    <com.android.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_quick_qs_pulldown"
             android:title="@string/quick_pulldown_title"
             android:defaultValue="true" />
+
+    <PreferenceScreen
+            android:key="qs_rows_columns"
+            android:fragment="com.armory.settings.fragments.QsRowsColumns"
+            android:title="@string/qs_rows_columns_title"/>
 
 </PreferenceScreen>
