--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<<<<<<< ec0b0ff313e6de316265d5c43160b1528696e33b
 <!-- Copyright (C) 2017 InvictusROM
+     Copyright (C) 2016 The Nitrogen OS
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -8,13 +8,6 @@
 
           http://www.apache.org/licenses/LICENSE-2.0
 
-=======
-<!-- Copyright (C) 2016 The Nitrogen OS
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-          http://www.apache.org/licenses/LICENSE-2.0
->>>>>>> Hardware key custom rebinding (2/2)
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -57,5 +50,27 @@
         <item>8</item>
         <item>9</item>
     </string-array>
+
+    <!--- Buttons backlight timeout -->
+    <string-array name="backlight_timeout_entries">
+        <item>@string/backlight_timeout_on</item>
+        <item>@string/backlight_timeout_3s</item>
+        <item>@string/backlight_timeout_default</item>
+        <item>@string/backlight_timeout_10s</item>
+        <item>@string/backlight_timeout_15s</item>
+        <item>@string/backlight_timeout_20s</item>
+        <item>@string/backlight_timeout_30s</item>
+    </string-array>
+
+    <string-array name="backlight_timeout_values">
+        <item>0</item>
+        <item>3000</item>
+        <item>5000</item>
+        <item>10000</item>
+        <item>15000</item>
+        <item>20000</item>
+        <item>30000</item>
+    </string-array>
+
 
 </resources>
