Hardware key custom rebinding (2/2) Longpress back to kill app [2/2]

--- a/res/xml/settings_hwkeys.xml
+++ b/res/xml/settings_hwkeys.xml
@@ -19,4 +19,8 @@
             android:title="@string/swap_volume_buttons"
             android:defaultValue="true" />
 
+   <PreferenceScreen
+            android:key="hwkeys_advanced"
+            android:fragment="com.armory.settings.ui.hwkeys.AdvancedSettings"
+            android:title="@string/settings_advanced_title"/>
 </PreferenceScreen>
