--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -27,6 +27,9 @@
         <item>@string/hardware_keys_action_sleep</item>
         <item>@string/hardware_keys_action_last_app</item>
         <item>@string/hardware_keys_action_split_screen</item>
+        <item>@string/hardware_keys_action_screenshot</item>
+        <item>@string/hardware_keys_action_partial_screenshot</item>
+        <item>@string/hardware_keys_action_pip</item>
     </string-array>
 
     <string-array name="hardware_keys_action_values" translatable="false">
@@ -40,6 +43,9 @@
         <item>7</item>
         <item>8</item>
         <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
     </string-array>
 
     <!--- Buttons backlight timeout -->
@@ -62,6 +68,4 @@
         <item>20000</item>
         <item>30000</item>
     </string-array>
-
-
 </resources>
