--- a/res/xml/settings_statusbar.xml
+++ b/res/xml/settings_statusbar.xml
@@ -25,4 +25,18 @@
              android:summary="@string/status_bar_ime_notification_summary"
              android:defaultValue="true"/>
 
+         <com.android.settings.preference.SystemSettingSwitchPreference
+             android:key="network_traffic_state"
+             android:title="@string/network_traffic_state_title"
+             android:summary="@string/network_traffic_state_summary"
+             android:defaultValue="true" />
+
+        <com.android.settings.preference.CustomSeekBarPreference
+             android:key="network_traffic_autohide_threshold"
+             android:title="@string/network_traffic_autohide_threshold_title"
+             android:max="10"
+             settings:min="0"
+             settings:units="" />
+
+
 </PreferenceScreen>
