Pimp the power menu out [2/2]
Change-Id: I60928bd4fe4bf820dcf06b1bfc25202248ef1837

--- a/res/xml/settings_main.xml
+++ b/res/xml/settings_main.xml
@@ -30,6 +30,11 @@
             android:title="@string/lockscreen_settings_title"/>
 
     <PreferenceScreen
+            android:fragment="com.armory.settings.ui.powermenu.MainSettings"
+            android:key="armory_powermenu_settings"
+            android:title="@string/powermenu_settings_title"/>
+
+    <PreferenceScreen
             android:fragment="com.armory.settings.ui.usb.MainSettings"
             android:key="armory_usb_settings"
             android:title="@string/usb_settings_title"/>
