--- a/res/xml/settings_navbar.xml
+++ b/res/xml/settings_navbar.xml
@@ -25,4 +25,16 @@
             android:summary="@string/navigation_bar_ime_button_summary"
             android:defaultValue="true"/>
 
+        <SwitchPreference
+            android:key="navigation_bar_show"
+            android:title="@string/navigation_bar_show_title"
+            android:summary="@string/navigation_bar_show_summary"
+            android:persistent="false" />
+        <SwitchPreference
+            android:key="hardware_keys_disable"
+            android:title="@string/hardware_keys_disable_title"
+            android:summary="@string/hardware_keys_disable_summary"
+            android:persistent="false"
+            android:dependency="navigation_bar_show"/>
+
 </PreferenceScreen>
