--- a/res/xml/settings_lockscreen.xml
+++ b/res/xml/settings_lockscreen.xml
@@ -19,4 +19,10 @@
             android:title="@string/double_tap_sleep_lockscreen"
             android:defaultValue="true" />
 
+        <com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="lockscreen_battery_info"
+            android:title="@string/lockscreen_battery_info_title"
+            android:summary="@string/lockscreen_battery_info_summary"
+            android:defaultValue="false" />
+
 </PreferenceScreen>
