--- a/res/xml/settings_statusbar.xml
+++ b/res/xml/settings_statusbar.xml
@@ -18,5 +18,11 @@
             android:key="double_tap_sleep_gesture"
             android:title="@string/double_tap_sleep_statusbar"
             android:defaultValue="true" />
+            
+         <com.android.settings.preference.SystemSettingSwitchPreference
+             android:key="status_bar_ime_notification"
+             android:title="@string/status_bar_ime_notification_title"
+             android:summary="@string/status_bar_ime_notification_summary"
+             android:defaultValue="true"/>
 
 </PreferenceScreen>
