Begin UI organization

--- a/res/xml/settings_hwkeys.xml
+++ b/res/xml/settings_hwkeys.xml
@@ -14,24 +14,9 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <PreferenceScreen
-            android:fragment="com.armory.settings.ui.hwkeys.MainSettings"
-            android:key="armory_hwkeys_settings"
-            android:title="@string/hwkeys_settings_title"/>
-
-    <PreferenceScreen
-            android:fragment="com.armory.settings.ui.navbar.MainSettings"
-            android:key="armory_navbar_settings"
-            android:title="@string/navbar_settings_title"/>
-
-    <PreferenceScreen
-            android:fragment="com.armory.settings.ui.lockscreen.MainSettings"
-            android:key="armory_lockscreen_settings"
-            android:title="@string/lockscreen_settings_title"/>
-
-    <PreferenceScreen
-            android:fragment="com.armory.settings.ui.usb.MainSettings"
-            android:key="armory_usb_settings"
-            android:title="@string/usb_settings_title"/>
+        <com.android.settings.preference.SystemSettingSwitchPreference
+            android:key="swap_volume_buttons"
+            android:title="@string/swap_volume_buttons"
+            android:defaultValue="true" />
 
 </PreferenceScreen>
