--- a/res/layout/qs_layout.xml
+++ b/res/layout/qs_layout.xml
@@ -8,16 +8,17 @@
     android:id="@+id/main_content"
     android:orientation="vertical">
 
-    <com.deso.settings.PagerSlidingTabStrip
-        android:id="@+id/tabs"
+    <com.armory.settings.PagerSlidingTabStrip
+        android:id="@+id/qstab_tabs"
         app:pstsShouldExpand="true"
         android:layout_width="match_parent"
         android:layout_height="48dp" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
+        android:id="@+id/qstab_viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".DesoSettings"/>
+        tools:context=".ui.qs.AdvancedSettings"/>
 
-</LinearLayout> 
+</LinearLayout>
+
