--- a/res/xml/hwkeys_rebinding.xml
+++ b/res/xml/hwkeys_rebinding.xml
@@ -18,11 +18,6 @@
         android:title="@string/hwkeys_title"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <SwitchPreference
-        android:key="enable_hw_keys"
-        android:title="@string/enable_hw_keys_title"
-        android:persistent="false" />
-
     <PreferenceCategory
         android:key="home_key"
         android:title="@string/hardware_keys_home_key_title" >
@@ -33,8 +28,7 @@
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
             android:entryValues="@array/hardware_keys_action_values"
-            android:persistent="false"
-            android:dependency="enable_hw_keys" />
+            android:persistent="false" />
 
         <ListPreference
             android:key="hardware_keys_home_double_tap"
@@ -42,8 +36,7 @@
             android:title="@string/hardware_keys_double_tap_title"
             android:entries="@array/hardware_keys_action_entries"
             android:entryValues="@array/hardware_keys_action_values"
-            android:persistent="false"
-            android:dependency="enable_hw_keys" />
+            android:persistent="false" />
 
     </PreferenceCategory>
 
@@ -57,8 +50,7 @@
             android:title="@string/hardware_keys_short_press_title"
             android:entries="@array/hardware_keys_action_entries"
             android:entryValues="@array/hardware_keys_action_values"
-            android:persistent="false"
-            android:dependency="enable_hw_keys" />
+            android:persistent="false" />
 
         <ListPreference
             android:key="hardware_keys_menu_long_press"
@@ -66,8 +58,7 @@
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
             android:entryValues="@array/hardware_keys_action_values"
-            android:persistent="false"
-            android:dependency="enable_hw_keys" />
+            android:persistent="false" />
 
     </PreferenceCategory>
 
@@ -79,8 +70,7 @@
             android:key="kill_app_longpress_back"
             android:title="@string/kill_app_longpress_back"
             android:summary="@string/kill_app_longpress_back_summary"
-            android:defaultValue="true"
-            android:dependency="enable_hw_keys" />
+            android:defaultValue="true" />
     </PreferenceCategory>
 
         <com.android.settings.preference.CustomSeekBarPreference
@@ -89,8 +79,7 @@
             android:max="255"
             settings:min="0"
             settings:units=""
-            android:persistent="false"
-            android:dependency="enable_hw_keys" />
+            android:persistent="false" />
 
         <ListPreference
             android:dialogTitle="@string/backlight_timeout_title"
@@ -98,8 +87,6 @@
             android:entryValues="@array/backlight_timeout_values"
             android:key="backlight_timeout"
             android:persistent="false"
-            android:title="@string/backlight_timeout_title"
-            android:dependency="enable_hw_keys" />
-
+            android:title="@string/backlight_timeout_title" />
 
 </PreferenceScreen>
